--- a/Private(Mentor)/style.css
+++ b/Private(Mentor)/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background: url("blackboard.jpg") no-repeat top center fixed;
+    background: url("../blackboard.jpg") no-repeat top center fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
